Here's the product, don't be mad

--- a/index.html
+++ b/index.html
@@ -5,12 +5,42 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>My Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="./css/styles.css">
+    
 </head>
 
 <body>
-    <H1>
+    <h1>
         My Portfolio
-    </H1>
+    </h1>
+    
+    <div>
+      <h1>Chaz Fried</h1>
+
+      <h2>Software Developer</h2>
+      <hr>
+      <p>
+        Programming is an enjoyable exercise of the mind to <em>create</em> and <em>build</em> solutions to problems, or engaging forms of programs.
+      </p>
+      <img src="https://i.imgflip.com/69wwnf.jpg" alt="This is not the image you're looking for.">
+      <h3>About Me</h3>
+      <p>Did you ever hear the tragedy of Darth Plagueis The Wise? I thought not. It’s not a story the Jedi would tell you. It’s a Sith legend. Darth Plagueis was a Dark Lord of the Sith, so powerful and so wise he could use the Force to influence the midichlorians to create life… He had such a knowledge of the dark side that he could even keep the ones he cared about from dying. The dark side of the Force is a pathway to many abilities some consider to be unnatural. He became so powerful… the only thing he was afraid of was losing his power, which eventually, of course, he did. Unfortunately, he taught his apprentice everything he knew, then his apprentice killed him in his sleep. Ironic. He could save others from death, but not himself.</p>
+      <h3>My Projects</h3>
+      <ul>
+        <li>Project 1</li>
+        <li>Project 2</li>
+        <li>Project 3</li>
+      </ul>
+      <h3>Contact Me</h3>
+      <p>Cell #: (605)-475-6962</p>
+      <a href="mailto:niceTry@wiseGuy.com">Email me here.</a>
+      <hr>
+      <hr>
+      <hr>
+      <h2>You thought there was another image....</h2>
+      <img src="./images/It_Was_Me__Dio.jpg">
+      <h1>BUT IT WAS ME, DIO!</h1>
+    </div>
     <!-- 
       Directions:
         1. Create a DIV element to contain the page content
