--- a/kitchensink.html
+++ b/kitchensink.html
@@ -10,16 +10,11 @@
 </head>
 
 <body>
-    <div class="container">
-        <nav id="top" class="navigation">
-            <a href="kitchensink.html">kitchen sink</a>
-            <a href="#bottom">link to id</a>
-        </nav>    
-    </div>
-
-    <div id="bottom">
-        
-    </div>
+    <h1>h1 heading</h1>
+    <h2>h2 heading</h2>
+    <h3>h3 heading</h3>
+    <blockquote>this is a block quote</blockquote>
+    
 </body>
 
 </html>
